--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 ## Installation options
-redis_version: 2.8.24
+redis_version: 7.4.2
 redis_install_dir: /opt/redis
 redis_install_from_source: true
 redis_dir: /var/lib/redis/{{ redis_port }}
@@ -37,7 +37,7 @@ redis_service_name: "redis_{{ redis_port }}"
 ## Networking/connection options
 redis_bind: false
 redis_port: 6379
-redis_password: false
+redis_password: "{{ lookup('bitwarden.secrets.lookup', 'd9f85496-a428-4041-99b5-b25e00afe94f') }}"
 # Slave replication options
 redis_min_slaves_to_write: 0
 redis_min_slaves_max_lag: 10
@@ -54,6 +54,7 @@ redis_socket_perm: 755
 ## Replication options
 # Set slaveof just as you would in redis.conf. (e.g. "redis01 6379")
 redis_slaveof: false
+# redis_slaveof: "{{ hostvars[groups['redis-nodes'][0]].internal_ip }} {{ redis_port }}"
 # Make slaves read-only. "yes" or "no"
 redis_slave_read_only: "yes"
 redis_slave_priority: 100
